--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Please let us know how we did with your support request. All feedback is appreci
 </tr>
 </table>
 <br>
-<div id="sub" onclick="location.href='file:///C:/Users/Asus/Desktop/WebDev%20Projects/Feedback%20page%20(half)/Thank%20You%20Page.html'" style="line-height: 40px; font-size: 15px; height:40px; background-color: hsl(25, 97%, 53%); border-radius: 30px; text-align: center; cursor: pointer;">
+<div id="sub" onclick="location.href='https://anushka-tirkey.github.io/Interactive-Rating-Component/Thank You Page.html'" style="line-height: 40px; font-size: 15px; height:40px; background-color: hsl(25, 97%, 53%); border-radius: 30px; text-align: center; cursor: pointer;">
 <b>SUBMIT</b>
 </div>
 </div>
